custom page templates
fixed display error because original query was not reset after custom
post loops, added partners to front page, custom page templates, latest
news archive page, pagination, prepping content for migration, styling
single event post.  also photo galleries and classes tabs added.

--- a/css/gingarte.css
+++ b/css/gingarte.css
@@ -270,6 +270,27 @@ COLLAPSIBLE SECTIONS:
   clear: both;
 }
 
+/* -- PAGINATION STYLING -- (a dot shows up if i add a background-color)*/
+.nav-previous {
+  float: left;
+  margin: 5% 0;
+}
+.nav-next {
+  float: right;
+  margin: 5% 0;
+
+}
+.pagination {
+
+}
+.latest-news-item h3 {
+  margin-bottom: 0;
+}
+.latest-news-item p {
+  margin-top: 1%;
+}
+
+
 /* -- FOOTER STYLING -- */
 footer {
   clear: both;
@@ -413,8 +434,12 @@ footer img {
     float: left;
   }
 
+  /* -- PAGINATION -- */
+  .pagination {
+    width: 500px;
+  }
 
-
+  /* -- FOOTER -- */
   footer img {
     width: 50px;
   }
