--- a/css/resources.css
+++ b/css/resources.css
@@ -2,8 +2,7 @@
 .container {
 	width: 85%;
 }
-.container h1 {
-	border-bottom: 3px double rgba(3,94,123,1);
+.trainbetter h1 {
 	padding-bottom: 3%;
 	text-align: center;
 }
@@ -45,7 +44,7 @@
 }
 
 h2 {
-	font-family: Lato, sans-serif;
+	font-family: Montserrat, sans-serif;
 }
 .trainbetter h2 {
 	text-align: center;
@@ -58,7 +57,7 @@ h2 {
 	font-size: 2.3em;
 }
 .resource {
-	font-family: Lato, sans-serif;
+	font-family: Montserrat, sans-serif;
 	color: rgba(1,1,1,1);
 	padding-left: 5%;
 }
