--- a/css/gingarte.css
+++ b/css/gingarte.css
@@ -50,12 +50,18 @@ h2 {
   font-size: 1.4em;
 }
 .logo img {
-  width: 100px;
+  width: 90px;
 }
 .logo {
   margin: 0 auto;
+  color: rgba(224,27,60,1); /* LOGO RASPBERRY RED */
 }
-
+.mestremarisa {
+  font-size: 0.8em;
+}
+.mestremarisa h1 {
+  font-weight: 200;
+}
 
 body {
   font-family: Montserrat, Helvetica Neue, sans-serif;
@@ -75,7 +81,7 @@ body {
   padding: 1%;
 }
 .button:hover {
-  background-color: rgba(3,94,123,1);
+  background-color: rgba(224,27,60,1); /* LOGO RED */
 }
 .button a {
   color: white;
@@ -92,7 +98,7 @@ header {
 .contents {
   font-style: italic;
   margin-bottom: 3%;
-  color: rgba(56,49,50,0.6); /* LIGHT GREY FONT */
+  font-size: 0.8em;
 }
 
 
@@ -134,7 +140,7 @@ nav {
   padding: 15px 0;
   width: 100%;
   overflow: auto;
-  box-shadow: 1px 5px 5px rgba(1,1,1,1);
+  box-shadow: 1px 5px 5px rgba(1,1,1,0.7);
 }
 .menu-bar a {
   color: rgba(251,252,255,1);
@@ -154,7 +160,7 @@ nav {
 
 }
 .news-feature a:hover {
-  background-color: rgba(3,94,123,1);
+  background-color: rgba(224,27,60,1); /* LOGO RED */
 }
 .arrow-icon {
   float: right;
@@ -169,7 +175,8 @@ nav {
 .dropdown {
   display: none;
   text-transform: uppercase;
-  font-size: 1.4em;
+  font-size: 1.2em;
+  line-height: 1.5em;
   text-align: left;
   width: 100%;
   height: 250px;
@@ -189,8 +196,9 @@ nav {
 }
 .dropdown li:hover {
   /* highlight mobile menu items on hover */
-  background-color: rgba(3,94,123,1);
+  background-color: rgba(224,27,60,1); /* LOGO RED */
   width: 200px;
+
 }
 .dropdown .current-menu-item:hover {
   /* but don't change background color behind current mobile menu item */
@@ -250,7 +258,7 @@ nav {
   line-height: 1;
   padding-left: 5%;
   padding-bottom: 3%;
-  border-bottom: 3px double black;
+  border-bottom: 3px double rgba(137,133,133,1);
 }
 .items li {
   text-align: left;
@@ -281,7 +289,7 @@ nav {
   text-align: center;
 }
 .first:hover, .middle:hover, .last:hover {
-  background-color: rgba(96,88,86,.2);
+  background-color: rgba(96,88,86,.2); /* MADEUP HOVER GREY*/
 }
 .capostar {
   padding-top: 5%;
@@ -375,7 +383,7 @@ footer {
   border: 1px solid white;
 }
 .buttonelist:hover {
-  background-color: rgba(3,94,123,1);
+  background-color: rgba(224,27,60,1); /* LOGO RED */
 }
 .buttonelist a:hover {
   text-decoration: none;
@@ -459,7 +467,7 @@ footer {
     overflow: auto;
     font-family: Montserrat, Helvetica Neue, sans-serif;
     font-size: 1.1em;
-    box-shadow: 1px 5px 5px rgba(1,1,1,1);
+    box-shadow: 1px 5px 5px rgba(1,1,1,0.7);
 }
   .menu-full ul { /* GETS RID OF THE WEIRD INVISIBLE BULLET INDENT FOR LISTS*/
     margin: 0;
@@ -475,7 +483,7 @@ footer {
 
   .menu-full li:hover {
     /* highlight menu items on hover */
-    background-color: rgba(3,94,123,1);
+    background-color: rgba(224,27,60,1); /* LOGO RED */
     padding: 1%;
   }
   .menu-full .current-menu-item:hover {
