--- a/css/music.css
+++ b/css/music.css
@@ -1,10 +1,6 @@
-html {
-  box-sizing: border-box;
+.breadcrumbs a {
+  color: rgba(224,27,60,1); /* LOGO RED */
 }
-*, *:before, *:after {
-  box-sizing: inherit;
-}  /* added box sizing to this styelsheet because of tag link hover */
-
 
 .music {
   width: 80%;
@@ -74,10 +70,6 @@ html {
   text-decoration: none;
   padding: 0.5% 0.2%;
   color: white;
-
-
-/* added box sizing to this styelsheet at top because of discrepency on tag link hover */
-
 }
 
 @media screen and (min-width: 770px) {
