--- a/css/about.css
+++ b/css/about.css
@@ -72,6 +72,9 @@ a:hover .fa-chevron-down {
 .chicago h3 {
 	font-weight: 400;
 }
+.chicago .section-top-horzrule {
+	margin-top: 50px;
+}
 
 .description {
 	font-size: 1.3em;
@@ -114,25 +117,22 @@ a:hover .fa-chevron-down {
 }
 .troupe {
 }
-.chicago .partnerlogos {
-	display: flex;
-	align-items: center;
-	flex-wrap: wrap;
-	justify-content: center;
-}
 
-.chicago .plogo {
-	padding: 2%;
-	flex: none;
-	width: 20%;
-}
+
 .chicago img {
 	width: 100%;
 }
 .chicago .alsopartners {
 	clear: both;
 }
-
+.mobile-only {
+	display: block;
+	line-height: 1.2em;
+	text-transform: capitalize;
+}
+.partnerlogos {
+	display: none;
+}
 .button {
   margin: 0 auto;
   width: 50%;
@@ -147,22 +147,15 @@ a:hover .fa-chevron-down {
 	h2 {
 		font-size: 1.3em;
 	}
-
-
 }
 
 @media screen and (min-width: 550px) {
-	.description {
-	}
-
-
 	.titleicon {
 		float: left;
 		padding-top: 5%;
 	}
 	.titleicon img {
 		width: 150px;
-
 	}
 	.section-title {
 		clear: none;
@@ -185,9 +178,8 @@ a:hover .fa-chevron-down {
 		float: left;
 		padding-right: 3%;
 	}
-
 	.teacher {
-		width: 30%;
+		width: 33%;
 		float: left;
 		height: 210px;
 	}
@@ -196,13 +188,27 @@ a:hover .fa-chevron-down {
 		width: 100px;
 		height: 100px;
 		overflow: hidden;
-		border-radius: 25px;
+		border-radius: 50px;
 		margin: 0 auto;
-}
+	}
 	.teacher img {
 		min-height: 100%;
 		max-width: 100%;
 		object-fit: cover;
+	}
+	.mobile-only {
+		display: none;
+	}
+	.chicago .partnerlogos {
+		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+	.chicago .plogo {
+		padding: 2%;
+		flex: none;
+		width: 20%;
 	}
 }
 
@@ -211,9 +217,9 @@ a:hover .fa-chevron-down {
 	.chicago .plogo {
 		width: 12%;
 	}
-	.chicago .section-top-horzrule h2 {
-		border-top: 1px solid red;
-		width: 80%;
+	.chicago .section-top-horzrule {
+		border-top: 1px solid rgba(137,133,133,1);
+		padding-bottom: 3%;
 	}
 }
 /* FOR HUGE SCREENS! */
@@ -221,5 +227,13 @@ a:hover .fa-chevron-down {
 	.brazil, .group, .chicago {
 		width: 1000px;
 		margin: 0 auto;
+	}
+	.teacher .headshot {
+		width: 150px;
+		height: 150px;
+		border-radius: 75px;
+	}
+	.teacher {
+		height: 250px;
 	}
 }
